# TFY4235_Project1

./: .gitignore
output/: cluster.txt
src/: CMakeLists.txt  latticegenerator.cpp  latticegenerator.hpp  main.cpp  percolate.cpp  percolate.hpp  plotter.py  utils.cpp  utils.hpp
